updated the game

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ input {
 	text-align: center;
 	background-color: #f28a8a;
 }
-table { sfkdfsdkf;sdfjkl
+table { 
 	border-collapse: collapse; 
 	margin-bottom: 25px;
 }
